# triangle_intersection

./: CMakeLists.txt  README.md
inc/: intersection.hpp
src/: intersection.cpp  intersection_private.hpp  misc.cpp
test/: test.cpp
